# VideoAPI

./: .clang-format  CMakeLists.txt  README.md  build.sh
API/: go.mod
API/cmd/videoAPI/: videoAPI.go
API/internal/transport/rest/: handler.go
python/: infer_test.py
src/: api.cpp  api.hpp  bbox.cpp  bbox.hpp  cuda.cpp  cuda.hpp  infer.cpp  infer.hpp  logger.cpp  logger.hpp  model_loader.cpp  model_loader.hpp
